--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,8 +51,8 @@ jobs:
         env:
           PYTHONPATH: .
           APP__NAME: ${{ vars.CI_APP_NAME }}
-          DB__DRIVER: ${{ vars.CI_DB_DRIVER }}
+          DB__DRIVER: ${{ vars.CI_DB_DRIVER || 'sqlite' }}
           DB__DATABASE: ${{ vars.CI_DB_DATABASE }}
-          CACHE__BACKEND: ${{ vars.CI_CACHE_BACKEND }}
+          CACHE__BACKEND: ${{ vars.CI_CACHE_BACKEND || 'local' }}
           AUTH__JWT_SECRET: ${{ secrets.CI_JWT_SECRET }}
         run: uv run --frozen pytest --cov -q
