--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,3 +60,6 @@ markers = [
 [[tool.uv.index]]
 name = "tsinghua"
 url = "https://pypi.tuna.tsinghua.edu.cn/simple"
+
+[tool.uv]
+default-index = ["https://pypi.tuna.tsinghua.edu.cn/simple"]
