--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,37 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  migration-check:
+    if: |
+      startsWith(github.head_ref, 'fix/') ||
+      startsWith(github.head_ref, 'feat/') ||
+      startsWith(github.head_ref, 'refactor/') ||
+      startsWith(github.head_ref, 'migrations/')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
+        with:
+          enable-cache: true
+          cache-dependency-glob: "**/pyproject.toml"
+
+      - name: Sync dependencies
+        run: uv sync --frozen
+
+      - name: Check Alembic migrations
+        run: uv run alembic check
+
+      - name: Verify migration heads
+        run: uv run alembic heads --verbose
+
   test:
     if: |
       startsWith(github.head_ref, 'fix/') ||
