--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
           cache-dependency-glob: "**/pyproject.toml"
 
       - name: Sync dependencies
-        run: uv sync --frozen
+        run: uv sync
 
       - name: Check Alembic migrations
         run: uv run alembic check
