fix: resolve api accidentally deleted (#36)
* fix: resolve api accidentally deleted

* fix: fix pytest

* fix: add rule off health and metrics api endpoint

* fix: remove

* fix: change ci workflow

* fix: ci workflow

* fix: add db settings

* fix: remove

---------

Co-authored-by: jyysy <3839564625@qq.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,10 +34,10 @@ jobs:
           cache-dependency-glob: "**/pyproject.toml"
 
       - name: Sync dependencies
-        run: uv sync --frozen
+        run: uv sync
 
-      - name: Check Alembic migrations
-        run: uv run alembic check
+      - name: Set auth settings
+        run: echo "AUTH__JWT_SECRET=${{ secrets.CI_JWT_SECRET }}" >> $GITHUB_ENV
 
       - name: Verify migration heads
         run: uv run alembic heads --verbose
