--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ dependencies = [
     "alibabacloud_captcha20230305>=1.0.0",
     "alibabacloud_tea_openapi>=0.3.0",
     "alibabacloud_tea_util>=0.3.0",
+    "openpyxl>=3.1.0",
+    "chardet>=5.2.0",
 ]
 
 [dependency-groups]
