fix: fix docker default netword conflict

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -41,3 +41,10 @@ services:
 volumes:
   postgres_data:
   redis_data:
+
+networks:
+  default:
+    driver: bridge
+    ipam:
+     config:
+       - subnet: 172.20.0.0/16
